[package]
name = "mongreldb-server"
version = "0.64.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "HTTP daemon for MongrelDB — serves SQL, native queries, and typed Kit API over HTTP for multi-process access."
repository = "https://github.com/visorcraft/MongrelDB"

[[bin]]
name = "mongreldb-server"
path = "src/main.rs"

[lib]
name = "mongreldb_server"
path = "src/lib.rs"

[features]
default = []
# Non-production escape hatch: allows plaintext cluster transport in non-test
# builds of the server library/binary. Never enable for release packages.
dangerous-test-transport = ["mongreldb-cluster/dangerous-test-transport"]

[dependencies]
mongreldb-core = { path = "../mongreldb-core", version = "0.64.5" }
mongreldb-query = { path = "../mongreldb-query", version = "0.64.5" }
mongreldb-protocol = { path = "../mongreldb-protocol", version = "0.64.5" }
# The protocol crate's public API is parameterized over these shared ids/HLC
# types (DatabaseId, TransactionId, HlcTimestamp, MetadataVersion, ...); the
# server must name them to build protocol records.
mongreldb-types = { path = "../mongreldb-types", version = "0.64.5" }
# Commit receipts surfaced by the core's idempotent-commit path are typed over
# the commit log's `CommitReceipt`/`DurabilityLevel`; the server names them
# when echoing receipt fields back in idempotent-write responses (S1B-005).
mongreldb-log = { path = "../mongreldb-log", version = "0.64.5" }
# Cluster bootstrap workflows (spec section 11.1, S2A-002): the `cluster`/`node`
# CLI subcommands and the `/admin/cluster/*` endpoints map onto this crate's
# node-identity and membership functions.
mongreldb-cluster = { path = "../mongreldb-cluster", version = "0.64.5" }
# Tablet engine sinks for production fragment/AI workers (P0.2): resolve the
# applied ClusterReplica core for a hosted tablet without dual-root opens.
mongreldb-consensus = { path = "../mongreldb-consensus", version = "0.64.5" }
axum = "0.8"
tower = { version = "0.5", features = ["limit"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
arrow = "58"
# Public cluster SQL planning seam (P0.4) names DataFusion logical plans.
datafusion = "54.0.0"
futures = "0.3"
async-trait = "0.1"
prost = "0.14"
tonic = { version = "0.14.6", features = ["tls-ring"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "stream", "rustls-tls"] }
base64 = "0.22"
fs2 = "0.4"
hmac = "0.12"
sha2 = "0.10"
zeroize = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[dev-dependencies]
tower = "0.5"
tempfile = "3"
mongreldb-client = { path = "../mongreldb-client", version = "0.64.5" }
datafusion = "54.0.0"
rcgen = "0.13"
